update config apc

--- a/php/modules/apc.ini
+++ b/php/modules/apc.ini
@@ -15,4 +15,5 @@ apc.num_files_hint=1024
 ; default = no value
 apc.mmap_file_mask=/tmp/apc.XXXXXX
 ; default = 0
-apc.enable_cli=1
+; is prod apc.enable_cli=1
+apc.enable_cli=0
