--- a/php/modules/x-debug.ini
+++ b/php/modules/x-debug.ini
@@ -8,4 +8,5 @@ xdebug.profiler_output_name=xdebug-profile-cachegrind.out-%H-%R
 xdebug.var_display_max_children = 128
 xdebug.var_display_max_data = 2048
 xdebug.var_display_max_depth = 128
+xdebug.max_nesting_level = 200
 xdebug.idekey = "ECLIPSE"
