update config terminator

--- a/_config/terminator/config
+++ b/_config/terminator/config
@@ -1,27 +1,34 @@
 [global_config]
-    title_hide_sizetext = True
+  title_hide_sizetext = True
+  enabled_plugins = CustomCommandsMenu, InactivityWatch, ActivityWatch, TerminalShot, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  sticky = True
 [keybindings]
 [profiles]
-    [[default]]
-        background_darkness = 0.99
-        font = Inconsolata Medium 12
-        background_color = "#002b36"
-        show_titlebar = False
-        foreground_color = "#eee8d5"
-    [[b&w]]
-        show_titlebar = False
-        cursor_color = "#599760"
-    [[tiny]]
-        use_system_font = False
-        font = Monospace 8
-        show_titlebar = False
-        cursor_color = "#b23030"
+  [[default]]
+    background_darkness = 0.76
+    background_type = transparent
+    foreground_color = "#eee8d5"
+    show_titlebar = False
+    font = Inconsolata Medium 12
+    background_color = "#002b36"
+    scrollback_infinite = True
+  [[b&w]]
+    show_titlebar = False
+    cursor_color = "#599760"
+  [[tiny]]
+    use_system_font = False
+    background_darkness = 0.82
+    background_type = transparent
+    cursor_color = "#b23030"
+    show_titlebar = False
+    font = Monospace 8
+    scrollback_infinite = True
 [layouts]
-    [[default]]
-        [[[child1]]] 
-            type = Terminal
-            parent = window0
-        [[[window0]]]
-            type = Window
-            parent = ""
+  [[default]]
+    [[[child1]]]
+      type = Terminal
+      parent = window0
+    [[[window0]]]
+      type = Window
+      parent = ""
 [plugins]
