--- a/_config/terminator/config
+++ b/_config/terminator/config
@@ -1,38 +1,35 @@
 [global_config]
+  enabled_plugins = CustomCommandsMenu, InactivityWatch, ActivityWatch, TerminalShot, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   title_hide_sizetext = True
   window_state = maximise
-  enabled_plugins = CustomCommandsMenu, InactivityWatch, ActivityWatch, TerminalShot, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  suppress_multiple_term_dialog = True
   sticky = True
 [keybindings]
 [profiles]
   [[default]]
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     visible_bell = True
-    background_darkness = 0.76
+    background_darkness = 0.82
     background_type = transparent
-    foreground_color = "#eee8d5"
+    background_image = None
+    foreground_color = "#839496"
     show_titlebar = False
     font = Ubuntu 11
-    background_color = "#002b36"
     scrollback_infinite = True
   [[b&w]]
+    background_image = None
     show_titlebar = False
     cursor_color = "#599760"
   [[tiny]]
     use_system_font = False
     background_darkness = 0.82
     background_type = transparent
+    background_image = None
     cursor_color = "#b23030"
     show_titlebar = False
     font = Monospace 8
     scrollback_infinite = True
 [layouts]
-  [[window1]]
-    [[[child1]]]
-      type = Terminal
-      parent = window0
-    [[[window0]]]
-      type = Window
-      parent = ""
   [[default]]
     [[[child0]]]
       position = 72:27
@@ -68,4 +65,11 @@
       type = Terminal
       order = 0
       parent = child3
+  [[window1]]
+    [[[child1]]]
+      type = Terminal
+      parent = window0
+    [[[window0]]]
+      type = Window
+      parent = ""
 [plugins]
