--- a/_config/terminator/config
+++ b/_config/terminator/config
@@ -21,13 +21,16 @@
     show_titlebar = False
     cursor_color = "#599760"
   [[tiny]]
-    use_system_font = False
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    background_image = None
     background_darkness = 0.82
     background_type = transparent
-    background_image = None
+    use_system_font = False
     cursor_color = "#b23030"
+    foreground_color = "#839496"
     show_titlebar = False
     font = Monospace 8
+    background_color = "#002b36"
     scrollback_infinite = True
 [layouts]
   [[default]]
