Add configuration ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,1 +1,5 @@
-hostfile = $HOME/.ansible/hosts
+[defaults]
+inventory      = ~/.ansible/hosts
+forks          = 5
+force_color    = 1
+roles_path     = ~/.ansible/roles
