Fix error for declaration prefer-stable

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,5 @@
         "lesmyrmidons/zsh-config": "~1"
     },
     "minimum-stability": "dev",
-    "prefer-stability": true
+    "prefer-stable": true
 }
