--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "lesmyrmidons/zsh-config": "~1"
+        "lesmyrmidons/zsh-config": "~1",
+        "ocramius/package-versions": "^1.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
