--- a/_config/terminator/config
+++ b/_config/terminator/config
@@ -1,77 +1,78 @@
 [global_config]
+  enabled_plugins = InactivityWatch, CustomCommandsMenu, ActivityWatch, TerminalShot, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  suppress_multiple_term_dialog = True
   title_hide_sizetext = True
   window_state = maximise
-  suppress_multiple_term_dialog = True
-  enabled_plugins = InactivityWatch, CustomCommandsMenu, ActivityWatch, TerminalShot, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
 [keybindings]
-[profiles]
-  [[default]]
-    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
-    visible_bell = True
-    background_darkness = 0.82
-    background_type = transparent
-    background_image = None
-    foreground_color = "#839496"
-    show_titlebar = False
-    font = Terminus for Powerline Italic 10
-    scrollback_infinite = True
-  [[b&w]]
-    background_image = None
-    show_titlebar = False
-    cursor_color = "#599760"
-  [[tiny]]
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
-    background_image = None
-    background_darkness = 0.82
-    background_type = transparent
-    use_system_font = False
-    cursor_color = "#b23030"
-    foreground_color = "#839496"
-    show_titlebar = False
-    font = Monospace 8
-    background_color = "#002b36"
-    scrollback_infinite = True
 [layouts]
   [[default]]
     [[[child0]]]
-      position = 72:27
-      type = Window
       order = 0
       parent = ""
+      position = 72:27
       size = 1848, 1025
+      type = Window
     [[[child1]]]
-      position = 924
-      type = HPaned
       order = 0
       parent = child0
+      position = 924
+      type = HPaned
     [[[child3]]]
+      order = 1
+      parent = child1
       position = 512
       type = VPaned
-      order = 1
-      parent = child1
     [[[terminal2]]]
-      profile = default
       command = ""
-      type = Terminal
       order = 0
       parent = child1
-    [[[terminal5]]]
-      profile = tiny
-      command = ""
-      type = Terminal
-      order = 1
-      parent = child3
-    [[[terminal4]]]
       profile = default
-      command = ""
       type = Terminal
+    [[[terminal4]]]
+      command = ""
       order = 0
       parent = child3
+      profile = default
+      type = Terminal
+    [[[terminal5]]]
+      command = ""
+      order = 1
+      parent = child3
+      profile = tiny
+      type = Terminal
   [[window1]]
     [[[child1]]]
-      type = Terminal
       parent = window0
+      type = Terminal
     [[[window0]]]
-      type = Window
       parent = ""
+      type = Window
 [plugins]
+[profiles]
+  [[default]]
+    background_darkness = 0.82
+    background_type = transparent
+    cursor_color = "#839496"
+    font = Terminus for Powerline Italic 10
+    foreground_color = "#839496"
+    login_shell = True
+    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    scrollback_infinite = True
+    show_titlebar = False
+    visible_bell = True
+  [[b&w]]
+    cursor_color = "#599760"
+    login_shell = True
+    show_titlebar = False
+  [[tiny]]
+    background_color = "#002b36"
+    background_darkness = 0.82
+    background_type = transparent
+    cursor_color = "#b23030"
+    font = Monospace 8
+    foreground_color = "#839496"
+    login_shell = True
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    scrollback_infinite = True
+    show_titlebar = False
+    use_system_font = False
