Optimize Ansible configuration

--- a/_ansible.cfg
+++ b/_ansible.cfg
@@ -2,5 +2,11 @@
 # inventory      = ~/.ansible/hosts
 forks          = 50
 force_color    = 1
-roles_path     = ~/.ansible/roles
 ansible_python_interpreter = /usr/bin/python3
+gather_subset  = !hardware
+
+# Enable timing information
+callback_whitelist = timer, profile_tasks
+
+[ssh_connection]
+pipelining = True
