--- a/_ansible.cfg
+++ b/_ansible.cfg
@@ -2,11 +2,23 @@
 # inventory      = ~/.ansible/hosts
 forks          = 50
 force_color    = 1
+roles_path     = ~/.ansible/roles
 ansible_python_interpreter = /usr/bin/python3
+gathering      = smart
 gather_subset  = !hardware
 
 # Enable timing information
-callback_whitelist = timer, profile_tasks
+callback_whitelist      = timer, profile_tasks
+
+fact_caching_connection = /tmp/facts_cache
+fact_caching            = jsonfile
+# The timeout is defined in seconds 
+# This is 6 hours 
+fact_caching_timeout    = 21600
+internal_poll_interval  = 0.001
+
 
 [ssh_connection]
 pipelining = True
+ssh_args = -o ControlMaster=auto -o ControlPersist=3600s -o PreferredAuthentications=publickey
+control_path = %(directory)s/ansible-ssh-%%h-%%p-%%r
